@@ -21,7 +21,6 @@ package org.apache.cassandra.distributed.mock.nodetool;
 import java.lang.management.ManagementFactory;
 import java.util.Iterator;
 import java.util.Map;
-import javax.management.ListenerNotFoundException;
 
 import com.google.common.collect.Multimap;
 
@@ -45,14 +44,13 @@ import org.apache.cassandra.service.CacheServiceMBean;
 import org.apache.cassandra.service.GCInspector;
 import org.apache.cassandra.service.StorageProxy;
 import org.apache.cassandra.service.StorageService;
-import org.apache.cassandra.service.StorageServiceMBean;
 import org.apache.cassandra.streaming.StreamManager;
 import org.apache.cassandra.tools.NodeProbe;
-import org.mockito.Mockito;
 
 public class InternalNodeProbe extends NodeProbe
 {
     private final boolean withNotifications;
+    private boolean previousSkipNotificationListeners = false;
 
     public InternalNodeProbe(boolean withNotifications)
     {
@@ -66,26 +64,10 @@ public class InternalNodeProbe extends NodeProbe
         mbeanServerConn = null;
         jmxc = null;
 
-        if (withNotifications)
-        {
-            ssProxy = StorageService.instance;
-        }
-        else
-        {
-            // replace the notification apis with a no-op method
-            StorageServiceMBean mock = Mockito.spy(StorageService.instance);
-            Mockito.doNothing().when(mock).addNotificationListener(Mockito.any(), Mockito.any(), Mockito.any());
-            try
-            {
-                Mockito.doNothing().when(mock).removeNotificationListener(Mockito.any(), Mockito.any(), Mockito.any());
-                Mockito.doNothing().when(mock).removeNotificationListener(Mockito.any());
-            }
-            catch (ListenerNotFoundException e)
-            {
-                throw new AssertionError(e);
-            }
-            ssProxy = mock;
-        }
+        previousSkipNotificationListeners = StorageService.instance.skipNotificationListeners;
+        StorageService.instance.skipNotificationListeners = !withNotifications;
+
+        ssProxy = StorageService.instance;
         msProxy = MessagingService.instance();
         streamProxy = StreamManager.instance;
         compactionProxy = CompactionManager.instance;
@@ -105,7 +87,7 @@ public class InternalNodeProbe extends NodeProbe
     @Override
     public void close()
     {
-        // nothing to close. no-op
+        StorageService.instance.skipNotificationListeners = previousSkipNotificationListeners;
     }
 
     @Override
